Add analog clock

--- a/config/config.js.template
+++ b/config/config.js.template
@@ -3,7 +3,9 @@ let config = {
     {
       module: "clock",
       position: "fullscreen_above",
-      config: {},
+      config: {
+        displayType: "both"
+      },
     },
   ],
 };
